# HamamatsuMiniSpec

./: .gitignore  CMakeLists.txt  PlotSpectrum.txt  PlotSpectrum.txt~  README.md  SpecMeasurement.cpp  SpecMeasurement.h  Spectrometer.cpp  Spectrometer.h  SpectrometerMain.cpp
SpecMeasurement/: SpecMeasurement.cpp  SpecMeasurement.h
Spectrometer_gui/: CMakeLists.txt  PlotSpectrum.txt  SpectrometerApp.cpp  SpectrometerApp.h  SpectrometerAppMain.cpp  Test.txt  Test1.txt  Test3.txt
